Rename eventName property to id for consistency

--- a/app/modules/contentHeader/templates/partials/part_contentHeaderButtonContainer.hbs
+++ b/app/modules/contentHeader/templates/partials/part_contentHeaderButtonContainer.hbs
@@ -8,7 +8,7 @@
       {{/if}}
       <div class="items">
         {{#each items}}
-          <div class="item {{itemClass}}" data-id="{{id}}" data-index="{{index}}" data-type="{{type}}" data-event="{{eventName}}">{{{itemHtml}}}</div>
+          <div class="item {{itemClass}}" data-id="{{id}}" data-index="{{index}}" data-type="{{type}}">{{{itemHtml}}}</div>
         {{/each}}
       </div>
     </div>
