--- a/app/modules/contentHeader/templates/sortItem.hbs
+++ b/app/modules/contentHeader/templates/sortItem.hbs
@@ -1,5 +1,5 @@
-<input type="radio" id="{{index}}" name="sort" value="{{index}}">
-<label for="{{index}}">
+<input type="radio" id="{{group.index}}-{{index}}" name="sort">
+<label for="{{group.index}}-{{index}}">
   <span class="direction">
     <i class="default fa fa-minus"></i>
     <i class="asc fa fa-sort-asc"></i>
