Fix input label behaviour

--- a/app/modules/contentHeader/templates/filterItem.hbs
+++ b/app/modules/contentHeader/templates/filterItem.hbs
@@ -1,7 +1,7 @@
 {{!-- toggle --}}
 {{#ifValueEquals type 'toggle'}}
-  <input type="checkbox" id="{{group.index}}-{{index}}" {{#if checked}}checked{{/if}} />
-  <label for="{{group.index}}-{{index}}">{{> part_contentHeaderButtonContent}}</label>
+  <input type="checkbox" id="filter-{{group.index}}-{{index}}" {{#if checked}}checked{{/if}} />
+  <label for="filter-{{group.index}}-{{index}}">{{> part_contentHeaderButtonContent}}</label>
 {{/ifValueEquals}}
 {{!-- search --}}
 {{#ifValueEquals type 'search'}}
