--- a/app/modules/editor/global/templates/editorForm.hbs
+++ b/app/modules/editor/global/templates/editorForm.hbs
@@ -1,1 +1,6 @@
-<div class="editor-form-inner form-container"></div>
+<div class="editor-form-inner form-container">
+  <div class="no-matches display-none">
+    <div class="icon"><i class="fa fa-frown-o"></i></div>
+    <div class="text">{{t 'app.nomatches'}} </div>
+  </div>
+</div>
