--- a/app/modules/projects/templates/projects.hbs
+++ b/app/modules/projects/templates/projects.hbs
@@ -2,5 +2,5 @@
 	<div class="no-projects display-none">
 		{{t 'app.noprojectstodisplay'}}
 	</div>
-  <ul class="projects-list clearfix grid-layout"></ul>
+  <ul class="projects-list clearfix grid-layout" data-layout="grid"></ul>
 </div>
