--- a/app/modules/projects/templates/projects.hbs
+++ b/app/modules/projects/templates/projects.hbs
@@ -4,3 +4,10 @@
 	</div>
   <ul class="projects-list clearfix grid-layout" data-layout="grid"></ul>
 </div>
+<div class="nav display-none">
+	<div class="inner">
+		<button class="prev btn action-primary"><i class="fa fa-angle-left"></i></button>
+		<div class="summary">Page <span class="currentCount">10</span> of <span class="totalCount">100</span></div>
+		<button class="next btn action-primary"><i class="fa fa-angle-right"></i></button>
+	</div>
+</div>
