Add selected link state

--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -187,6 +187,7 @@
           color: white;
           border: none;
           border-radius: 0;
+          &.selected,
           &:hover {
             color: @secondary-color;
           }
