--- a/app/modules/editor/pageStructure/templates/editorPageComponent.hbs
+++ b/app/modules/editor/pageStructure/templates/editorPageComponent.hbs
@@ -2,7 +2,7 @@
 
 <div class="component-inner">
   <div class="component-detail no-select">
-    <div class="component-type">{{component.attributes.displayName}}</div>
+    <div class="component-type">{{componentName}}</div>
     <h4 class="component-title">{{#if displayTitle}}{{{displayTitle}}}{{else}}{{{title}}}{{/if}}</h4>
     <div class="component-body">{{{body}}}</div>
   </div>
