--- a/app/modules/editor/courseStructure/templates/editorMenuLayer.hbs
+++ b/app/modules/editor/courseStructure/templates/editorMenuLayer.hbs
@@ -1,7 +1,7 @@
 <div class="editor-menu-layer-controls clearfix">
   <div class="editor-menu-layer-actions add-control">
-    <button class="editor-menu-layer-add-page btn primary"><i class="fa fa-file"></i>{{t 'app.addpage'}}</button>
-    <button class="editor-menu-layer-add-menu btn primary-hollow"><i class="fa fa-folder"></i> {{t 'app.addsubmenu'}}</button>
+    <button class="editor-menu-layer-add btn primary" data-type="page"><i class="fa fa-file"></i>{{t 'app.addpage'}}</button>
+    <button class="editor-menu-layer-add btn primary-hollow" data-type="menu"><i class="fa fa-folder"></i> {{t 'app.addsubmenu'}}</button>
   </div>
   <div class="editor-menu-layer-actions paste-zone paste-zone-page">
     <button class="editor-menu-layer-paste btn secondary">{{t 'app.paste'}}</button>
