Add error formatting

--- a/app/core/less/app.less
+++ b/app/core/less/app.less
@@ -21,6 +21,17 @@ span.error {
   color: @alert-color;
 }
 
+pre {
+  padding: 15px;
+  background-color: #263944;
+  color: white;
+  font-size: 80%;
+  text-align: left;
+  white-space: pre;
+  overflow-y: auto;
+  border-radius: 3px;
+}
+
 // Loading overlay styling
 // =======================
 
