Update hbs for theming

--- a/app/modules/appHeader/templates/appHeader.hbs
+++ b/app/modules/appHeader/templates/appHeader.hbs
@@ -1,6 +1,7 @@
 <div class="appHeader-bg"></div>
 <div class="appHeader-inner clearfix">
   <div class="appHeader-left">
+    <div href="#" class="appHeader-item appHeader-product-logo"></div>
     <div href="#" class="appHeader-item appHeader-product-name">{{t 'app.productname'}}</div>
   </div>
   <div class="appHeader-right">
