--- a/app/modules/login/templates/forgotPassword.hbs
+++ b/app/modules/login/templates/forgotPassword.hbs
@@ -1,6 +1,7 @@
 {{importConstants}}
 
-<div class="login-logo"></div>
+<div class="main-logo"></div>
+<div class="sub-logo"></div>
 
 <div class="login-title">{{t 'app.resetpassword'}}</div>
 
