--- a/app/modules/login/templates/login.hbs
+++ b/app/modules/login/templates/login.hbs
@@ -1,5 +1,7 @@
 <div class="login-inner">
-    <div class="login-logo"></div>
+    <div class="bg"></div>
+    <div class="main-logo"></div>
+    <div class="sub-logo"></div>
 
     <form class="login-form" autocomplete="off">
         <div class="login-title">{{t 'app.signin'}}</div>
