--- a/app/modules/login/templates/resetPassword.hbs
+++ b/app/modules/login/templates/resetPassword.hbs
@@ -1,5 +1,6 @@
 <div class="inner">
-  <div class="login-logo"></div>
+  <div class="main-logo"></div>
+  <div class="sub-logo"></div>
 
   <div class="login-title">{{t 'app.resetpassword'}}</div>
 
