Update app styles for theming

--- a/app/core/less/app.less
+++ b/app/core/less/app.less
@@ -21,6 +21,11 @@ span.error {
   color: @alert-color;
 }
 
+input[type="checkbox"] {
+  color: @secondary-color;
+  accent-color: @secondary-color; 
+}
+
 pre {
   padding: 15px;
   background-color: #263944;
