Fix header height

--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -11,6 +11,7 @@
   border-bottom: 1px solid fade(@primary-color, 20%);
 
   &-inner {
+    position: relative;
     color: @contentHeader-title;
     padding: 15px;
 
