Update toast styling

--- a/app/modules/notify/plugins/toast/less/toast.less
+++ b/app/modules/notify/plugins/toast/less/toast.less
@@ -12,12 +12,13 @@
 
 .toast {
   display: flex;
+  align-items: center;
   background-color: #9CABC4;
   color: @white;
   font-size: 115%;
   font-weight: bold;
   text-align: left;
-  padding: 20px;
+  padding: 15px;
   border-radius: 3px;
   margin-bottom: 5px;
   opacity: 0;
@@ -46,7 +47,8 @@
   
   .icon {
     flex: 1;
-    font-size: 45px;
+    font-size: 36px;
+    padding-left: 10px;
   }
   
   .body {
@@ -54,6 +56,7 @@
   }
   
   .close {
+    flex: 1;
     padding-left: 15px;
     font-weight: @font-weight-bold;
     color: @white;
