Fix framework import

--- a/app/modules/frameworkImport/templates/frameworkImport.hbs
+++ b/app/modules/frameworkImport/templates/frameworkImport.hbs
@@ -1,5 +1,5 @@
 <div id="import_upload" class="inner">
-  <form class="frameworkImport forms" action="api/adapt/import" method="post" autocomplete="off">
+  <form class="frameworkImport forms" action="api/adapt/import" method="POST" autocomplete="off">
     <div class="form-group">
       <div class="field field-file">
         <label for="course">
