--- a/app/modules/frameworkImport/templates/partials/part_frameworkImportStatusMessages.hbs
+++ b/app/modules/frameworkImport/templates/partials/part_frameworkImportStatusMessages.hbs
@@ -3,7 +3,7 @@
     <h3>{{heading}}</h3>
     <div class="messages">
       {{#each messages}}
-        <div>{{code}} {{data}}</div>
+        <div>{{text}} {{data}}</div>
       {{/each}}
     </div>
   </div>
