--- a/app/modules/frameworkImport/less/frameworkImport.less
+++ b/app/modules/frameworkImport/less/frameworkImport.less
@@ -6,7 +6,7 @@
 
 .frameworkImport {
   .summaryText {
-    margin-bottom: 30px;;
+    margin: 30px;
     padding: 15px;
     background-color: @success-color;
     &.error { background-color: @alert-color; }
