Fix toggle styling

--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -167,6 +167,9 @@
             }
           }
         }
+        &[data-type="toggle"] {
+          padding: 10px 0;
+        }
       }
       .sorts .items > .item {
         .direction i { 
