--- a/app/modules/modal/less/modal.less
+++ b/app/modules/modal/less/modal.less
@@ -1,58 +1,35 @@
 @import 'colours';
 
 .modal {
-    position: fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    padding: 30px;
-    box-sizing: border-box;
-    z-index:4000;
-    overflow-y: scroll;
-    background: rgba(0,0,0,0.4);
-    .modal-popup {
-        height: 100%;
-        background-color: @ui-content-color;
-        &-inner {
-            height: 100%;
-        }
-    }
-
-    i {
-        margin-right:4px;
-    }
-
-    .modal-popup-toolbar {
-        background-color: @tertiary-color;
-        text-align:right;
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  padding: 30px;
+  box-sizing: border-box;
+  z-index:4000;
+  overflow-y: scroll;
+  background: rgba(0,0,0,0.4);
+  
+  .modal-popup {
+    height: 100%;
+    background-color: @ui-content-color;
+    &-header .contentHeader {
+      background-color: @tertiary-color;
+      &-inner {
+        position: initial;
         color: @white;
-        padding: 5px 10px;
-        button {
-            color: @primary-color;
-            padding:0px 10px 0px 10px;
-            height:40px;
-            display:inline-block;
-            transition:background-color 0.3s;
-            i {
-                color: @secondary-color;
-            }
-            &:hover {
-                color: @white;
-            }
-            &:disabled {
-                color:#666;
-            }
-        }
+      }
     }
-    .modal-popup-inner {
-        flex: 1 1 auto;
-        .modal-popup-content {
-            height: 100%;
-            .modal-popup-content-inner {
-                height: 100%;
-                overflow-y:auto;
-            }
-        }
+    &-inner {
+      height: 100%;
+      flex: 1 1 auto;
+      
+      .modal-popup-content {
+        height: 100%;  
+        overflow-y:auto;
+      }
     }
+  }
 }
