--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -146,13 +146,13 @@
           display: inline-block;
         }
       }
-      .filters .items .item {
-        &[data-type="select"] {
+      .filters .items {
+        .item[data-type="select"] {
           select {
             width: 100%;
           }
         }
-        &[data-type="tags"] {
+        .item[data-type="tags"] {
           .tags {
             max-height: 150px;
             padding: 5px;
@@ -167,7 +167,7 @@
             }
           }
         }
-        &[data-type="toggle"] {
+        .item[data-type="toggle"] {
           padding: 10px 0;
         }
       }
