--- a/app/modules/notify/plugins/toast/less/toast.less
+++ b/app/modules/notify/plugins/toast/less/toast.less
@@ -16,7 +16,6 @@
   background-color: #9CABC4;
   color: @white;
   font-size: 115%;
-  font-weight: bold;
   text-align: left;
   padding: 15px;
   border-radius: 3px;
@@ -53,6 +52,9 @@
   
   .body {
     flex: 5;
+    .title {
+      font-weight: bold;
+    }
   }
   
   .close {
