Update contentHeader structure

--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -39,11 +39,13 @@
         overflow: hidden;
       }
     }
-    .titles {
-      .course, .title { .truncate; }
-      .title {
-        font-size: 18px;
-        font-weight: @font-weight-bold;
+    .contentHeader-titles {
+      .titles {
+        .course, .title { .truncate; }
+        .title {
+          font-size: 18px;
+          font-weight: @font-weight-bold;
+        }
       }
     }
 
