--- a/app/modules/contentHeader/templates/contentHeader.hbs
+++ b/app/modules/contentHeader/templates/contentHeader.hbs
@@ -6,34 +6,36 @@
       <div class="filters"></div>
       <div class="actions"></div>
     </div>
-    {{#if breadcrumbs}}
-      <div class="breadcrumbs">
-        {{#each breadcrumbs}}
-          <div class="item">
-            {{#if @last}}
-              {{{title}}}
-            {{else}}
-              {{#if url}}
-                <a href="{{url}}">{{{title}}}</a>
+    <div class="contentHeader-titles">
+      {{#if breadcrumbs}}
+        <div class="breadcrumbs">
+          {{#each breadcrumbs}}
+            <div class="item">
+              {{#if @last}}
+                {{{title}}}
               {{else}}
-                {{title}}
+                {{#if url}}
+                  <a href="{{url}}">{{{title}}}</a>
+                {{else}}
+                  {{title}}
+                {{/if}}
               {{/if}}
-            {{/if}}
-          </div>
-          {{#unless @last}}
-            <div class="separator unselectable">&gt;</div>
-          {{/unless}}
-        {{/each}}
-      </div>
-    {{/if}}
-    {{#if title}}
-      <div class="titles">
-        {{#if course}}
-          <div class="course">{{{course.title}}}</div>
-        {{/if}}
-        <div class="title">{{{title}}}</div>
-      </div>
-    {{/if}}
+            </div>
+            {{#unless @last}}
+              <div class="separator unselectable">&gt;</div>
+            {{/unless}}
+          {{/each}}
+        </div>
+      {{/if}}
+      {{#if title}}
+        <div class="titles">
+          {{#if course}}
+            <div class="course">{{{course.title}}}</div>
+          {{/if}}
+          <div class="title">{{{title}}}</div>
+        </div>
+      {{/if}}
+    </div>
   </div>
   <div class="links"></div>
 </div>
