--- a/app/modules/contentHeader/templates/sortItem.hbs
+++ b/app/modules/contentHeader/templates/sortItem.hbs
@@ -1,5 +1,5 @@
-<input type="radio" id="sort-{{group.index}}-{{index}}" name="sort">
-<label for="sort-{{group.index}}-{{index}}">
+<input type="radio" id="sort-{{uniqueId}}" name="sort">
+<label for="sort-{{uniqueId}}">
   <span class="direction">
     <i class="default fa fa-minus"></i>
     <i class="asc fa fa-sort-asc"></i>
