Move asset edit to collection view

--- a/app/modules/assetManagement/templates/assetManagementCollection.hbs
+++ b/app/modules/assetManagement/templates/assetManagementCollection.hbs
@@ -1,2 +1,12 @@
-<div class="asset-management-collection-inner clearfix">
+<div class="asset-management-form">
+  <div class="asset-management-form-inner">
+    <div class="asset-management-form-preview"></div>
+    <div class="asset-management-form-file"></div>
+    <div class="asset-management-form-container"></div>
+    <div class="asset-management-form-buttons">
+      <button class="btn action-primary action save">{{t 'app.save'}}</button>
+      <button class="btn action-secondary action cancel">{{t 'app.cancel'}}</button>
+    </div>
+  </div>
 </div>
+<div class="asset-management-collection-inner clearfix"></div>
