Update form field help styles

--- a/app/modules/scaffold/less/forms.less
+++ b/app/modules/scaffold/less/forms.less
@@ -90,14 +90,14 @@ form .error {
   .tooltip {
     position: absolute;
     z-index: 2;
-    max-width: 300px;
-    padding: 5px;
-    border-radius: 6px;
-    margin: 10px 0;
+    max-width: 350px;
+    padding: 10px;
+    border-radius: 3px;
+    margin: 5px 0;
     background-color: @tertiary-color;
     color: @white;
     opacity: 0;
-    text-align: center;
+    text-align: justify;
     transition: opacity 0.3s, visibility 0s 0.3s;
     visibility: hidden;
   }
