Remove duplicate titles for custom fieldsets

--- a/app/modules/scaffold/templates/fieldset.hbs
+++ b/app/modules/scaffold/templates/fieldset.hbs
@@ -4,4 +4,7 @@
     <legend>{{legend}}</legend>
   </div>
   {{/if}}
+  {{#if description}}
+  <div class="description">{{description}}</div>
+  {{/if}}
 </fieldset>
