Update sidebar labels

--- a/app/modules/editor/global/templates/partials/part_editorCommon.hbs
+++ b/app/modules/editor/global/templates/partials/part_editorCommon.hbs
@@ -53,7 +53,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-menusettings">
       <span class="editor-common-sidebar-menusettings-inner">
-        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.editormenusettings'}}
+        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.themeeditor'}}
       </span>
     </button>
   </div>
@@ -61,7 +61,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-extensions">
       <span class="editor-common-sidebar-extensions-inner">
-        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.editorextensions'}}
+        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.manageextensions'}}
       </span>
     </button>
   </div>
