--- a/app/modules/editor/global/templates/partials/part_editorCommon.hbs
+++ b/app/modules/editor/global/templates/partials/part_editorCommon.hbs
@@ -37,7 +37,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-config">
       <span class="editor-common-sidebar-config-inner">
-        <i class="fa fa-chevron-right primary-color"/>{{ t 'app.editorconfig'}}
+        <i class="fa fa-chevron-right primary-color"/>{{ t 'app.configurationsettings'}}
       </span>
     </button>
   </div>
