--- a/app/modules/notify/plugins/toast/less/toast.less
+++ b/app/modules/notify/plugins/toast/less/toast.less
@@ -11,8 +11,6 @@
 }
 
 .toast {
-  display: flex;
-  align-items: center;
   background-color: #9CABC4;
   color: @white;
   font-size: 115%;
@@ -21,10 +19,14 @@
   border-radius: 3px;
   margin-bottom: 5px;
   opacity: 0;
-  transition: opacity 0.5s;
-  cursor: pointer;
   border: 1px solid transparent;
-
+  transition: opacity 0.5s;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  cursor: pointer;
+  
+  &.persist {
+    cursor: default;
+  }
   &.visible { 
     opacity: 1;
   }
@@ -40,29 +42,43 @@
   &.success {
     background-color: @success-color;
   }
-  &:hover {
-    border: 1px solid white;
-  }
-  
-  .icon {
-    flex: 1;
-    font-size: 36px;
-    padding-left: 10px;
-  }
-  
-  .body {
-    flex: 5;
-    word-break: break-word;
-    .title {
-      font-weight: bold;
+
+  &-inner {
+    display: flex;
+    align-items: center;
+    .icon {
+      flex: 1;
+      font-size: 36px;
+      padding-left: 10px;
+    }
+    
+    .body {
+      flex: 5;
+      word-break: break-word;
+      .title {
+        font-weight: bold;
+      }
+    }
+    
+    .close {
+      flex: 1;
+      padding-left: 15px;
+      font-weight: @font-weight-bold;
+      color: @white;
+      font-size: 90%;
     }
   }
-  
-  .close {
-    flex: 1;
-    padding-left: 15px;
-    font-weight: @font-weight-bold;
-    color: @white;
-    font-size: 90%;
+  .debug {
+    margin-top: 10px;
+    margin-left: 15px;
+    details {
+      summary {
+        font-weight: bold;
+        cursor: pointer;
+      }
+      pre {
+        margin-top: 10px;
+      }
+    }
   }
 }
