Fix form validation styling

--- a/app/core/less/forms.less
+++ b/app/core/less/forms.less
@@ -89,3 +89,10 @@ input:disabled, textarea:disabled {
     opacity: 0.3;
   }
 }
+
+.toast .body ul.error-list {
+  margin-top: 10px 0;
+  span.key {
+    font-weight: bold;
+  }
+}
