--- a/app/modules/notify/plugins/toast/templates/toast.hbs
+++ b/app/modules/notify/plugins/toast/templates/toast.hbs
@@ -3,7 +3,7 @@
     <div class="icon"><i class="fa fa-{{icon}}"></i></div>
     <div class="body">
       {{#if title}}<div class="title">{{title}}</div>{{/if}}
-      {{#if text}}<div class="text">{{text}}</div>{{/if}}
+      {{#if text}}<div class="text">{{{text}}}</div>{{/if}}
     </div>
     {{#if persist}}<button class="close">{{buttonText}}</button>{{/if}}
   </div>
