Add progress to upload form

--- a/app/modules/assetManagement/less/assetForm.less
+++ b/app/modules/assetManagement/less/assetForm.less
@@ -35,6 +35,20 @@
               display: none;
           }
         }
+
+        .progress {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 5px;
+          background-color: #dbf1f8;
+          .value {
+            height: 100%;
+            width: 0;
+            background-color: @secondary-color;
+          }
+        }
       }
 
       .asset-management-form-buttons {
