Update global disabled button styling

--- a/app/core/less/buttons.less
+++ b/app/core/less/buttons.less
@@ -36,6 +36,7 @@ button {
     }
     &:disabled {
         cursor: auto;
+        opacity: 0.5;
         border-color:@button-disabled-color!important;
         background:@button-disabled-color!important;
         color:@button-disabled-text-color!important;
