--- a/app/modules/pluginManagement/templates/pluginType.hbs
+++ b/app/modules/pluginManagement/templates/pluginType.hbs
@@ -1,4 +1,4 @@
-<div class="pluginType-inner {{#if isEnabled}}{{else}}row-disabled{{/if}}">
+<div class="pluginType-inner {{#if isEnabled}}{{else}}row-disabled{{/if}} {{#if canBeUpdated}}has-update{{/if}}">
   <div class="pluginType-description col-row">
     <div class="pluginType-title col-20">
       <h4 class="pluginType-title-inner tb-col-inner">{{displayName}}</h4>
