--- a/app/core/required/index.hbs
+++ b/app/core/required/index.hbs
@@ -5,23 +5,17 @@
     <link rel="icon" type="image/png" href="/css/assets/favicon.png" />
     <link rel="stylesheet" href="/css/adapt.css" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <script type="text/javascript">
+      window.AAT_BUILD_TYPE = '@@build.type';
+    </script>
+    <script src="libraries/modernizr.js"></script>
+    <script src="js/scriptLoader.js"></script>
     <script src="//cdn.ckeditor.com/4.5.7/full-all/ckeditor.js"></script>
-    {{#if isProduction}}
-    <script type="text/javascript" src="/require.js" data-main="/js/adapt.js"></script>
-    {{else}}
-    <script src="/require.js"></script>
-    <script src="/js/requireJsConfig.js"></script>
-    <script src="/core/app.js"></script>
-    {{/if}}
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.9.5/ace.js"></script>
-    <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-store, no-cache" />
-    <meta http-equiv="Expires" content="0" />
   </head>
   <body>
     <div id="app" class="app container">
-      <div class="location-title">
-      </div>
       <div class="app-inner">
       </div>
       <div class="loading">
