--- a/app/modules/editor/global/templates/partials/part_editorCommon.hbs
+++ b/app/modules/editor/global/templates/partials/part_editorCommon.hbs
@@ -29,7 +29,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-project">
       <span class="editor-common-sidebar-project-inner">
-        <i class="fa fa-chevron-right primary-color"/>{{ t 'app.editorsettings'}}
+        <i class="fa fa-chevron-right primary-color"></i>{{ t 'app.editorsettings'}}
       </span>
     </button>
   </div>
@@ -37,7 +37,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-config">
       <span class="editor-common-sidebar-config-inner">
-        <i class="fa fa-chevron-right primary-color"/>{{ t 'app.editorconfig'}}
+        <i class="fa fa-chevron-right primary-color"></i>{{ t 'app.editorconfig'}}
       </span>
     </button>
   </div>
@@ -45,7 +45,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-select-theme">
       <span class="editor-common-sidebar-select-theme-inner">
-        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.editorselecttheme'}}
+        <i class="fa fa-chevron-right primary-color"></i>{{ t 'app.editorselecttheme'}}
       </span>
     </button>
   </div>
@@ -53,7 +53,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-menusettings">
       <span class="editor-common-sidebar-menusettings-inner">
-        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.editormenusettings'}}
+        <i class="fa fa-chevron-right primary-color"></i>{{ t 'app.editormenusettings'}}
       </span>
     </button>
   </div>
@@ -61,7 +61,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-extensions">
       <span class="editor-common-sidebar-extensions-inner">
-        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.editorextensions'}}
+        <i class="fa fa-chevron-right primary-color"></i>{{ t 'app.editorextensions'}}
       </span>
     </button>
   </div>
