--- a/app/modules/projects/templates/projectsSidebar.hbs
+++ b/app/modules/projects/templates/projectsSidebar.hbs
@@ -13,7 +13,7 @@
     <div class="sidebar-row">
       <button class="projects-sidebar-my-courses">
         <span class="projects-sidebar-my-courses-inner">
-          <i class="fa fa-chevron-right primary-color"/>
+          <i class="fa fa-chevron-right primary-color"></i>
           {{t 'app.myprojects'}}
         </span>
       </button>
@@ -21,7 +21,7 @@
     <div class="sidebar-row">
       <button class="projects-sidebar-shared-courses">
         <span class="projects-sidebar-shared-courses-inner">
-          <i class="fa fa-chevron-right primary-color"/>
+          <i class="fa fa-chevron-right primary-color"></i>
           {{t 'app.sharedprojects'}}
         </span>
       </button>
