Fix for random requirejs reference error

--- a/app/core/required/index.hbs
+++ b/app/core/required/index.hbs
@@ -10,7 +10,7 @@
       window.AAT_BUILD_TYPE = '@@build.type';
     </script>
     <script src="libraries/modernizr.js"></script>
-    <script src="js/scriptLoader.js"></script>
+    <script src="libraries/require.min.js" data-main="js/scriptLoader.js"></script>
     <script src="//cdn.ckeditor.com/4.5.7/full-all/ckeditor.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.9.5/ace.js"></script>
   </head>
