--- a/app/core/required/index.hbs
+++ b/app/core/required/index.hbs
@@ -13,9 +13,14 @@
     <script src="libraries/require.min.js" data-main="js/scriptLoader.js"></script>
     <script src="//cdn.ckeditor.com/4.5.7/full-all/ckeditor.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.9.5/ace.js"></script>
+    <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-store, no-cache" />
+    <meta http-equiv="Expires" content="0" />
   </head>
   <body>
     <div id="app" class="app container">
+      <div class="location-title">
+      </div>
       <div class="app-inner">
       </div>
       <div class="loading">
