--- a/app/modules/assetManagement/less/asset.less
+++ b/app/modules/assetManagement/less/asset.less
@@ -125,6 +125,10 @@
             padding-top:35px;
             font-size:50px;
         }
+
+        img {
+            height: 100%;
+        }
     }
 
     &-details {
