--- a/app/modules/assetManagement/templates/assetManagementListItem.hbs
+++ b/app/modules/assetManagement/templates/assetManagementListItem.hbs
@@ -13,11 +13,15 @@
     </div>
     
     <div class="asset-management-list-item-image">
-        {{#if hasThumb}}
-            <div class="asset-management-list-item-image" style="background-image:url(api/assets/serve/{{_id}}?thumb=true&{{timestring updatedAt}})"></div>
+        {{#ifValueEquals subtype "svg+xml"}}
+            <img src="api/assets/serve/{{_id}}?{{timestring updatedAt}}"/>
         {{else}}
-            <i class="fa {{iconName}}"></i>
-        {{/if}}
+            {{#if hasThumb}}
+                <div class="asset-management-list-item-image" style="background-image:url(api/assets/serve/{{_id}}?thumb=true&{{timestring updatedAt}})"></div>
+            {{else}}
+                <i class="fa {{iconName}}"></i>
+            {{/if}}
+        {{/ifValueEquals}}
     </div>
     
     <div class="asset-management-list-item-details">
