Pass build type to client

--- a/app/core/required/index.hbs
+++ b/app/core/required/index.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <script type="text/javascript">
-      window.AAT_BUILD_TYPE = '@@build.type';
+      window.AAT_BUILD_TYPE = '{{buildType}}';
     </script>
     <script src="libraries/modernizr.js"></script>
     <script src="libraries/require.min.js" data-main="js/scriptLoader.js"></script>
