WIP: multilang work

--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -210,4 +210,18 @@
       }
     }
   }
+
+  .links-n-languages {
+    background: @tertiary-color;
+    display: flex;
+    .links {
+      flex-grow: 1;
+    }
+    .languages {
+      padding-right: 15px;
+      select {
+        min-width: auto;
+      }
+    }
+  }
 }
