--- a/app/modules/contentHeader/templates/contentHeader.hbs
+++ b/app/modules/contentHeader/templates/contentHeader.hbs
@@ -37,5 +37,8 @@
       {{/if}}
     </div>
   </div>
-  <div class="links"></div>
+  <div class="links-n-languages">
+    <div class="links"></div>
+    <div class="languages"></div>
+  </div>
 </div>
