--- a/app/modules/projects/templates/project.hbs
+++ b/app/modules/projects/templates/project.hbs
@@ -1,4 +1,4 @@
-<div class="project-inner clearfix no-select" data-id="{{_id}}">
+<div class="project-inner clearfix no-select" data-id="{{_courseId}}">
     <div class="project-header">
       <div class="project-header-inner">
 
