--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -157,6 +157,8 @@
         .item[data-type="tags"] {
           .tags {
             max-height: 150px;
+            overflow: hidden;
+            overflow-y: auto;
             padding: 5px;
             border: 1px solid rgba(255,255,255,0.2);
             border-radius: 3px;
