--- a/app/modules/scaffold/less/textArea.less
+++ b/app/modules/scaffold/less/textArea.less
@@ -1,26 +1,9 @@
 .field-editor {
-  .cke_chrome {
-    border-color: #ccc;
-    border-radius: 2px;
-    overflow: hidden;
-    box-shadow: none;
-    width: 93%;
-  }
+  .ck-editor {
+    max-width: 850px;
 
-  .cke_top {
-    background: #eee;
-    border-color: #ccc;
-    box-shadow: none;
-  }
-
-  .cke_bottom {
-    background: @white;
-    border-color: #ccc;
-  }
-
-  .cke_toolgroup {
-    background-image: none;
-    background: @white;
-    border-color: #ccc;
+    .ck-content {
+      min-height: 150px;
+    }
   }
 }
