Correct scope to resolve #286

--- a/app/modules/projects/templates/projectsSidebar.hbs
+++ b/app/modules/projects/templates/projectsSidebar.hbs
@@ -2,7 +2,7 @@
 
   <div class="separator"></div>
 
-  {{#ifHasScopes "write:adapt"}}
+  {{#ifHasScopes "write:content"}}
     <button class="projects-sidebar-add-course action-primary">
       <span class="projects-sidebar-add-course-inner">{{t 'app.addnewproject'}}</span>
     </button>
