--- a/app/modules/modal/less/modal.less
+++ b/app/modules/modal/less/modal.less
@@ -13,6 +13,8 @@
     background: rgba(0,0,0,0.4);
     .modal-popup {
         height: 100%;
+        display: flex;
+        flex-direction: column;
         background-color: @ui-content-color;
         &-inner {
             height: 100%;
@@ -47,6 +49,7 @@
     }
     .modal-popup-inner {
         flex: 1 1 auto;
+        overflow: auto;
         .modal-popup-content {
             height: 100%;
             .modal-popup-content-inner {
