Fix: Prevent enter key default behaviour on form fields. (#70)
Co-authored-by: Joe Allen <joe.allen@kineo.com>

--- a/app/modules/scaffold/templates/field.hbs
+++ b/app/modules/scaffold/templates/field.hbs
@@ -7,7 +7,7 @@
     <div class="tooltip">{{help}}</div>
   </div>
   {{/if}}
-  <button class="field-default" data-action="default" title="{{t 'app.reset'}}">
+  <button type="button" class="field-default" data-action="default" title="{{t 'app.reset'}}">
     <i class="fa fa-undo"></i>
   </button>
   {{else}}
